--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="bin/css/tachyons.min.css"/>
     <link rel="stylesheet" href="bin/css/pick-search.css"/>
-    <title>Monommania POS System</title>
+    <title>MonommaniaPOS</title>
 </head>
 <body>
     <div id="root">
